# DAG

./: .gitignore  Cargo.toml  README.md
.ai-code-index/: README.md  doctor.sh  files.sh  install-tools.sh  lib.sh  manifest.yaml  reindex.sh  repository-map.md  search.sh  stats.sh  struct-search.sh  symbols.sh
crates/sunmao-cli/: Cargo.toml
crates/sunmao-cli/src/: client.rs  config.rs  main.rs  project_resolve.rs  tui.rs
crates/sunmao-core/: Cargo.toml
crates/sunmao-core/src/: graph.rs  id.rs  lib.rs  ready.rs  state_machine.rs  write_scope.rs
crates/sunmao-core/tests/: illegal_graphs.rs
crates/sunmao-server/: Cargo.toml
crates/sunmao-server/src/: main.rs  routes.rs  sse.rs  state.rs
crates/sunmao-server/static/: app.js  index.html  styles.css
crates/sunmao-server/tests/: web_ui_static.rs
crates/sunmao-store/: Cargo.toml
crates/sunmao-store/migrations/: 001_init.sql
crates/sunmao-store/src/: error.rs  event.rs  git.rs  lib.rs  projects.rs  ready_maint.rs  repo.rs  validators.rs
crates/sunmao-store/tests/: integration_flow.rs
deploy/: Dockerfile  deploy-to-26.sh  docker-compose.yml
docs/00-需求分析/: 00-对话演进与结论.md  01-系统愿景.md  02-端到端流水线.md  03-节点模型.md  04-状态机.md  05-角色与协作.md  06-调度与任务服务.md  07-节点协议.md  08-边界拆分方法论.md  09-小任务与并行条件.md  10-Contract-First与架构并行.md  11-Task-IR与规划器.md  12-难点与产品定位.md  13-详细功能需求清单.md  14-非功能需求与待决策项.md  15-决策记录.md  99-对话原文摘录.md  ChatGPT-拆分任务边界方法.md  README.md
docs/01-架构设计/: 01-总体架构.md  02-数据模型.md  03-服务API.md  04-核心流程.md  05-实施计划.md  README.md
docs/02-使用文档/: Planner提示词模板.md  Worker提示词模板.md
scripts/: e2e-smoke.sh  pg-tunnel.sh
