[workspace]
resolver = "2"
members = [
    "crates/sunmao-core",
    "crates/sunmao-store",
    "crates/sunmao-server",
    "crates/sunmao-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sunmao"]

[workspace.dependencies]
sunmao-core = { path = "crates/sunmao-core" }
sunmao-store = { path = "crates/sunmao-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ulid = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
toml = "0.8"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
http = "1"
bytes = "1"
tempfile = "3"
