[package]
name = "sunmao-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sunmao"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
