[package]
name = "sunmao-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sunmao-server"
path = "src/main.rs"

[dependencies]
sunmao-core = { workspace = true }
sunmao-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
http = { workspace = true }
