[package]
name = "sunmao-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sunmao-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
